--- a/less/style.less
+++ b/less/style.less
@@ -124,7 +124,7 @@ header {
         height: 320px;
         cursor: pointer;
       }
-      .modal {
+      .myModal {
          display: none;
          position: fixed;
          z-index: 1;
@@ -147,7 +147,7 @@ header {
                width: 100%;
              }
            }
-          #caption, #caption2, #caption3, #caption4, #caption5, #caption6, #caption7, #caption8, #caption9 {
+          .caption {
             margin: auto;
             display: block;
             width: 80%;
@@ -157,7 +157,7 @@ header {
             padding: 10px 0;
             height: 150px;
           }
-          .modal-content, #caption, #caption2, #caption3, #caption4, #caption5, #caption6, #caption7, #caption8, #caption9{
+          .modal-content, .caption{
             -webkit-animation-name:zoom;
             -webkit-animation-duration:0.6s;
             animation-name:zoom;
@@ -171,7 +171,7 @@ header {
             from{transform:scale(0)}
             to{transform:scale(1)}
           }
-          .close, .close2, .close3, .close4, .close5, .close6, .close7, .close8, .close9{
+          .close{
               position: absolute;
               top: 130px;
               right: 35px;
@@ -180,7 +180,7 @@ header {
               font-weight: bold;
               transition: 0.3s;
             }
-            .close, .close2, .close3, .close4, .close5, .close6, .close7, .close8, .close9:hover, .close, .close2, .close3, .close4, .close5, .close6, .close7, .close8, .close9:focus{
+            .close:focus{
               color: #bbb;
               text-decoration: none;
               cursor: pointer;
